Update page titles to 'Hamit Efe Çınar'

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Hamit Efe Çınar">
   <meta property="og:description" content="Computer Science and Engineering Student specializing in Knowledge Representation and Reasoning">
   
-  <title>Hamit Efe Çınar Personal Website</title>
+  <title>Hamit Efe Çınar</title>
   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
