--- a/personal.html
+++ b/personal.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Personal Interests and Activities - Hamit Efe Çınar">
-  <title>Personal</title>
+  <title>Hamit Efe Çınar</title>
   
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="favicon.ico">
