--- a/publications.html
+++ b/publications.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Publications by Hamit Efe Çınar - Research in Knowledge Representation, Multi-Agent Systems, and AI">
-  <title>Publications</title>
+  <title>Hamit Efe Çınar</title>
   
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="favicon.ico">
