Add SEO improvements: robots.txt, sitemap.xml, structured data, and meta tags

--- a/index.html
+++ b/index.html
@@ -7,16 +7,50 @@
   <meta name="keywords" content="Hamit Efe Çınar, Computer Science, Knowledge Representation, Multi-Agent Systems, Sabancı University">
   <meta name="author" content="Hamit Efe Çınar">
   
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://efe-cinar.com/">
+  
   <!-- Open Graph / Social Media -->
   <meta property="og:type" content="website">
+  <meta property="og:url" content="https://efe-cinar.com/">
   <meta property="og:title" content="Hamit Efe Çınar">
   <meta property="og:description" content="Computer Science and Engineering Student specializing in Knowledge Representation and Reasoning">
+  <meta property="og:site_name" content="Hamit Efe Çınar">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Hamit Efe Çınar">
+  <meta name="twitter:description" content="Computer Science and Engineering Student specializing in Knowledge Representation and Reasoning">
   
   <title>Hamit Efe Çınar</title>
   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="favicon.ico">
+  
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Hamit Efe Çınar",
+    "url": "https://efe-cinar.com",
+    "jobTitle": "Computer Science and Engineering Student",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Sabancı University"
+    },
+    "alumniOf": {
+      "@type": "EducationalOrganization",
+      "name": "Sabancı University"
+    },
+    "sameAs": [
+      "https://github.com/odulsuzkisafilm",
+      "https://www.linkedin.com/in/efe-cinar"
+    ],
+    "email": "efe.cinar@sabanciuniv.edu"
+  }
+  </script>
   
   <!-- Google Fonts for Logo -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
