Remove .html extensions from URLs for cleaner navigation

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
   <!-- Navigation -->
   <nav>
     <div class="nav-container">
-      <a href="index.html" class="nav-brand">Efe Çınar</a>
+      <a href="/" class="nav-brand">Efe Çınar</a>
       <button class="mobile-menu-toggle" aria-label="Toggle menu">
         <span>☰</span>
       </button>
       <ul class="nav-menu">
-        <li><a href="publications.html">Publications</a></li>
-        <li><a href="academic.html">Academic Experiences</a></li>
-        <li><a href="personal.html">Personal</a></li>
+        <li><a href="/publications">Publications</a></li>
+        <li><a href="/academic">Academic Experiences</a></li>
+        <li><a href="/personal">Personal</a></li>
         <li class="dropdown">
           <span class="dropdown-toggle">CV & Transcript ▾</span>
           <div class="dropdown-menu">
@@ -119,7 +119,7 @@
             <a href="assets/CV_HamitEfeCinar.pdf" class="btn btn-primary" target="_blank">
               <i class="fas fa-file-pdf"></i> Download CV
             </a>
-            <a href="publications.html" class="btn btn-secondary">
+            <a href="/publications" class="btn btn-secondary">
               <i class="fas fa-book"></i> View Publications
             </a>
           </div>
@@ -243,9 +243,9 @@
         <p>&copy; <span class="current-year">2025</span> Hamit Efe Çınar. All rights reserved.</p>
       </div>
       <ul class="footer-links">
-        <li><a href="publications.html">Publications</a></li>
-        <li><a href="academic.html">Academic Experiences</a></li>
-        <li><a href="personal.html">Personal</a></li>
+        <li><a href="/publications">Publications</a></li>
+        <li><a href="/academic">Academic Experiences</a></li>
+        <li><a href="/personal">Personal</a></li>
       </ul>
       <div class="footer-social">
         <a href="mailto:efe.cinar@sabanciuniv.edu" class="social-icon" title="Email">
