--- a/personal.html
+++ b/personal.html
@@ -21,14 +21,14 @@
   <!-- Navigation -->
   <nav>
     <div class="nav-container">
-      <a href="index.html" class="nav-brand">Efe Çınar</a>
+      <a href="/" class="nav-brand">Efe Çınar</a>
       <button class="mobile-menu-toggle" aria-label="Toggle menu">
         <span>☰</span>
       </button>
       <ul class="nav-menu">
-        <li><a href="publications.html">Publications</a></li>
-        <li><a href="academic.html">Academic Experiences</a></li>
-        <li><a href="personal.html">Personal</a></li>
+        <li><a href="/publications">Publications</a></li>
+        <li><a href="/academic">Academic Experiences</a></li>
+        <li><a href="/personal">Personal</a></li>
         <li class="dropdown">
           <span class="dropdown-toggle">CV & Transcript ▾</span>
           <div class="dropdown-menu">
@@ -192,9 +192,9 @@
         <p>&copy; <span class="current-year">2025</span> Hamit Efe Çınar. All rights reserved.</p>
       </div>
       <ul class="footer-links">
-        <li><a href="publications.html">Publications</a></li>
-        <li><a href="academic.html">Academic Experiences</a></li>
-        <li><a href="personal.html">Personal</a></li>
+        <li><a href="/publications">Publications</a></li>
+        <li><a href="/academic">Academic Experiences</a></li>
+        <li><a href="/personal">Personal</a></li>
       </ul>
       <div class="footer-social">
         <a href="mailto:efe.cinar@sabanciuniv.edu" class="social-icon" title="Email">
