updated gdsc experience content

--- a/personal.html
+++ b/personal.html
@@ -79,7 +79,7 @@
           </div>
           <div class="timeline-content">
             <p>
-              Active member of GDSC, leading technical TensorFlow and Git/GitHub workshops of 2-3 hours each to help fellow students learn 
+              Active member of GDSC, leading technical TensorFlow, Selenium and Git/GitHub workshops of 2-3 hours each to help fellow students learn 
               essential development tools and frameworks.
             </p>
           </div>
