--- a/academic.html
+++ b/academic.html
@@ -63,9 +63,9 @@
             <p>
               Designing and implementing a platform-agnostic bot detection model as part of my graduation project. 
               Implementing account and action-based <strong>VAE</strong> models and comparing with <strong>PCA</strong> for dimensionality reduction. 
-              Conducting <strong>feature engineering</strong> to ensure cross-platform compatibility and developing novel approaches to avoid
+              Conducting <strong>feature engineering</strong> to ensure cross-platform compatibility and developing novel approaches (e.g. Learning to Place, SpringRank) to avoid
               <strong>distribution shifts</strong> across social media platforms. Contributing to paper planned for submission 
-              to <strong>ACM Web Conference 2026</strong>, Special Track on Web4Good (co-author).
+              to <strong>ICWSM 2026</strong> (co-author).
             </p>
           </div>
         </div>
