--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,7 @@
           <span class="me">Hamit Efe Çınar</span>, Onur Varol, Ali Najafi
         </p>
         <p class="publication-venue">
-          <i class="fas fa-book-open"></i> Planning to submit to ACM Web Conference 2026, Special Track on Web4Good
+          <i class="fas fa-book-open"></i> Planned to be submitted to ICWSM 2026
         </p>
         <span class="publication-status status-preparation">In Preparation</span>
         <p class="card-description mt-2">
