couple of updates regarding the new term

--- a/academic.html
+++ b/academic.html
@@ -64,8 +64,7 @@
               Designing and implementing a platform-agnostic bot detection model as part of my graduation project. 
               Implementing account and action-based <strong>VAE</strong> models and comparing with <strong>PCA</strong> for dimensionality reduction. 
               Conducting <strong>feature engineering</strong> to ensure cross-platform compatibility and developing novel approaches (e.g. Learning to Place, SpringRank) to avoid
-              <strong>distribution shifts</strong> across social media platforms. Contributing to paper planned for submission 
-              to <strong>ICWSM 2026</strong> (co-author).
+              <strong>distribution shifts</strong> across social media platforms. Contributing to paper planned for submission as a co-author.
             </p>
           </div>
         </div>
@@ -209,10 +208,29 @@
         <div class="timeline-item">
           <div class="timeline-header">
             <div>
+              <h3 class="timeline-title">Teaching Assistant - Theory of Computation</h3>
+              <p class="timeline-location">Sabancı University</p>
+            </div>
+            <span class="timeline-date">Jan 2026 - June 2026</span>
+          </div>
+          <p class="timeline-subtitle">
+            <strong>Instructor:</strong> Prof. Kemal İnan | <strong>Course:</strong> CS 407 - Theory of Computation
+          </p>
+          <div class="timeline-content">
+            <ul>
+              <li>Held weekly office hours to provide one-on-one assistance with course content</li>
+              <li>Graded quizzes and homework</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <div class="timeline-header">
+            <div>
               <h3 class="timeline-title">Teaching Assistant - Algorithms</h3>
               <p class="timeline-location">Sabancı University</p>
             </div>
-            <span class="timeline-date">Jan 2025 - Present</span>
+            <span class="timeline-date">Jan 2025 - Jan 2026 </span>
           </div>
           <p class="timeline-subtitle">
             <strong>Instructor:</strong> Prof. Esra Erdem | <strong>Course:</strong> CS 301 - Algorithms
